--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,12 @@ body {
     text-align: center;
 }
 
-#filterHeader {
+#addContactHeader {
     margin-top: 0;
+}
+
+#filterHeader {
+    /* margin-top: 0; */
 }
 
 /* contact item */
@@ -106,12 +110,21 @@ body {
 /* search contacts */
 
 .search input {
+    background-color: transparent;
     box-sizing: border-box;
     border: 2px solid black;
     font-size: 16px;
     padding: 12px;
     width: 100%;
 }
+
+.search ::placeholder { /* Most modern browsers support this now. */
+    color: #000;
+ }
+
+input:focus { /* Most modern browsers support this now. */
+    outline: 2px solid #FD757B;
+ }
 
 /* add contact */
 
